[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steadwing"
version = "0.1.2"
description = "Steadwing Python SDK — auto-captures exceptions, error logs and HTTP breadcrumbs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["steadwing"]
